feat: rebuild action for github

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 ---
 services:
   ownDynDNS:
-    image: sujiba/docker-owndyndns-netcup:latest
+    image: ghcr.io/naoalb/docker-owndyndns-netcup:latest
     container_name: ownDynDNS
     # Run container behind reverse proxy
     ports:
