--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -3,13 +3,10 @@ name: Docker Build and Push
 on:
   push:
     branches: [ "main" ]
-    # Publish semver tags as releases
-    tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "main" ]
 
 env:
-  # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
   REGISTRY: ghcr.io
 
@@ -19,19 +16,42 @@ jobs:
     permissions:
       contents: read
       packages: write
-      # This is required for requesting the JWT
       id-token: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for proper versioning
 
-      # Add support for more platforms with QEMU (optional)
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Generate version number
+        id: version
+        run: |
+          # Get current year and month
+          YEAR_MONTH=$(date +'%Y.%m')
+          
+          # Count existing tags for current year/month
+          EXISTING_TAGS=$(git tag -l "${YEAR_MONTH}.*" | wc -l)
+          # Increment counter
+          COUNTER=$((EXISTING_TAGS + 1))
+          
+          # Create version string
+          VERSION="${YEAR_MONTH}.${COUNTER}"
+          
+          echo "Generated version: $VERSION"
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+          
+          # Create and push new tag if not a PR
+          if [[ "${{ github.event_name }}" != "pull_request" ]]; then
+            git tag $VERSION
+            git push origin $VERSION
+          fi
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -40,19 +60,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=schedule
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=raw,value=${{ steps.version.outputs.version }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -63,3 +78,11 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Create Release
+        if: github.event_name != 'pull_request'
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.version.outputs.version }}
+          name: Release ${{ steps.version.outputs.version }}
+          generate_release_notes: true
