--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write    # Changed from 'read' to 'write' to allow tag creation
       packages: write
       id-token: write
 
@@ -23,6 +23,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch all history for proper versioning
+          token: ${{ secrets.GITHUB_TOKEN }}  # Added token for authentication
+
+      - name: Configure Git
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -50,7 +56,7 @@ jobs:
           # Create and push new tag if not a PR
           if [[ "${{ github.event_name }}" != "pull_request" ]]; then
             git tag $VERSION
-            git push origin $VERSION
+            git push origin $VERSION || echo "Failed to push tag, continuing workflow"
           fi
 
       - name: Log in to GitHub Container Registry
@@ -86,3 +92,4 @@ jobs:
           tag_name: ${{ steps.version.outputs.version }}
           name: Release ${{ steps.version.outputs.version }}
           generate_release_notes: true
+          token: ${{ secrets.GITHUB_TOKEN }}
