--- a/.github/workflows/build_image.yaml
+++ b/.github/workflows/build_image.yaml
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write    # Changed from 'read' to 'write' to allow tag creation
+      contents: write
       packages: write
       id-token: write
 
@@ -22,8 +22,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch all history for proper versioning
-          token: ${{ secrets.GITHUB_TOKEN }}  # Added token for authentication
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure Git
         run: |
@@ -32,6 +32,8 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          platforms: 'arm64,amd64'
 
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v3
@@ -39,21 +41,13 @@ jobs:
       - name: Generate version number
         id: version
         run: |
-          # Get current year and month
           YEAR_MONTH=$(date +'%Y.%m')
-          
-          # Count existing tags for current year/month
           EXISTING_TAGS=$(git tag -l "${YEAR_MONTH}.*" | wc -l)
-          # Increment counter
           COUNTER=$((EXISTING_TAGS + 1))
-          
-          # Create version string
           VERSION="${YEAR_MONTH}.${COUNTER}"
-          
           echo "Generated version: $VERSION"
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           
-          # Create and push new tag if not a PR
           if [[ "${{ github.event_name }}" != "pull_request" ]]; then
             git tag $VERSION
             git push origin $VERSION || echo "Failed to push tag, continuing workflow"
@@ -79,6 +73,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
